add docker run command

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,5 +7,4 @@ add_library(
 target_compile_definitions(${PROJECT_NAME} PRIVATE RAPIDJSON_HAS_STDSTRING)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/vendor/rapidjson/include/)
 
-target_link_libraries(${PROJECT_NAME} curl)
-
+target_link_libraries(${PROJECT_NAME} CURL)
