--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.24.2 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 
 add_library(
         ${PROJECT_NAME} docker.cpp
@@ -7,4 +7,4 @@ add_library(
 target_compile_definitions(${PROJECT_NAME} PRIVATE RAPIDJSON_HAS_STDSTRING)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/vendor/rapidjson/include/)
 
-target_link_libraries(${PROJECT_NAME} CURL)
+target_link_libraries(${PROJECT_NAME} ${CURL_LIBRARIES})
