--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(DockerClient)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include(FindCurl)
+find_package(CURL REQUIRED)
 
 add_subdirectory(src)
 add_subdirectory(tests)
