--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,7 +109,8 @@
         "chrono": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "charconv": "cpp"
     },
     
 }
