--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
+.vscode/*
 build*
 lib/*
 bin/*
-cmake-build-debug/*
-cmake-build-release/*
+cmake-build-debug*
+cmake-build-release*
 .idea/*
 *.so
 *.o
