--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 project(DockerClient)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 
 include(FindCURL)
 
 add_subdirectory(src)
 
-if (BUILD_TESTING)
+if (DOCKER_CLIENT_BUILD_TESTING)
     enable_testing()
     add_subdirectory(vendor/googletest-1.15.0)
     add_subdirectory(tests)
